--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-    <title>ImmoDrones</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Mukta">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bebas+Neue">
+    <title>WalkAround</title>
     
   </head>
   <body>
